[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drm-composer"
version = "0.1.0"
description = "Stateless screen-HTML compiler: scene markup -> drm_screen command batches + RGBA bitmaps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["numpy", "pillow", "drm-screen"]
keywords = ["drm", "html", "scene", "compositor", "embedded", "display"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/carstenbund/drm_composer"
Repository = "https://github.com/carstenbund/drm_composer"

[tool.setuptools.packages.find]
where = ["."]
include = ["drm_composer*"]
