[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drm-composer"
version = "0.1.0"
description = "HTML-to-screen compiler for Raspberry Pi and embedded Linux: scene markup -> drm_screen layer commands + RGBA bitmaps"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_LICENSES.md"]
authors = [{ name = "Carsten Bund", email = "carstenbund@gmail.com" }]
dependencies = ["numpy", "pillow", "drm-screen"]
keywords = [
    "drm", "kms", "html", "scene", "compositor", "display", "signage",
    "raspberry-pi", "raspberrypi", "embedded", "sbc", "kiosk", "linux",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/carstenbund/drm_composer"
Repository = "https://github.com/carstenbund/drm_composer"

[tool.setuptools.packages.find]
where = ["."]
include = ["drm_composer*"]
